--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
     "username": "root",
-    "password": "",
-    "database": "fsd_valencia_sequelize",
+    "password": "root",
+    "database": "ecomm_database_dev",
     "host": "127.0.0.1",
+    "port": "3309",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "ecomm_database_test",
     "host": "127.0.0.1",
+    "port": "3309",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "ecomm_database_production",
     "host": "127.0.0.1",
+    "port": "3309",
     "dialect": "mysql"
   }
 }
